# vercel-expressjs-typescript

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  package.json  tsconfig.json  vercel.json
api/404/: index.ts
api/_pruebas/: index.ts
api/v1/: index.js  index.ts
api/v1/_lib/hello/: hello.service.ts
api/v1/_lib/users/: users.router.ts
api/v1/lib/hello/: hello.controller.ts  hello.middleware.ts
api/v1/lib/users/: users.middleware.ts
api/v2/: index.ts
api/v3/: Cargo.toml  index.rs
api/v3/json/: Cargo.toml  index.rs
api/v3/json/lib/: parse.rs
api/v3/random/: Cargo.toml  index.rs
api/v3/random/lib/: util.rs
lib/: main.js
lib/404/: index.ts
lib/middleware/: index.js
lib/services/: user.service.js
lib/v1/controllers/: user.controller.js  welcome.controller.js
lib/v1/hello/: hello.router.ts
lib/v1/middleware/: index.js  index.ts
lib/v1/services/: user.service.js  user.service.ts  welcome.service.js  welcome.service.ts
lib/v1/users/: users.controller.ts  users.models.ts  users.service.ts
public/: 404.html
src/: main.ts
src/controllers/: user.controller.ts  welcome.controller.ts
